--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
 
 <table border='2'>
 <tr>
-<td><a href='html/Everest.html'><figure><img src='figuras/everest.jpg' width=150 height=150><center><figcaption>Everest</figcaption></center></a></td>
-<td><a href='html/K2.html'><figure><img src='figuras/k2.jpg' width=150 height=150><center><figcaption>k2</figcaption></center></a></td>
+<td><a href='html/everest.html'><figure><img src='figuras/everest.jpg' width=150 height=150><center><figcaption>Everest</figcaption></center></a></td>
+<td><a href='html/k2.html'><figure><img src='figuras/k2.jpg' width=150 height=150><center><figcaption>k2</figcaption></center></a></td>
+<td><a href='html/kangchenjunga.html'><figure><img src='figuras/Kangchenjunga.JPG' width=150 height=150><center><figcaption>Kangchenjunga</figcaption></center></a></td>
+</tr>
+<tr>
+<td><a href='html/lhotse.html'><figure><img src='figuras/Lhotse.jpg' width=150 height=150><center><figcaption>Lhotse</figcaption></center></a></td>
+<td><a href='html/makalu.html'><figure><img src='figuras/makalu.jpg' width=150 height=150><center><figcaption>Makalu</figcaption></center></a></td>
+<td><a href='html/chooyu.html'><figure><img src='figuras/chooyu.jpg' width=150 height=150><center><figcaption>Cho Oyu</figcaption></center></a></td>
+</tr>
+<tr>
+<td><a href='html/dhaulagiri.html'><figure><img src='figuras/dhaulagiri.jpg' width=150 height=150><center><figcaption>Dhaulagiri</figcaption></center></a></td>
+<td><a href='html/manaslu.html'><figure><img src='figuras/manaslu.jpg' width=150 height=150><center><figcaption>Manaslu</figcaption></center></a></td>
+<td><a href='html/nangaparbat.html'><figure><img src='figuras/nangaparbat.jpg' width=150 height=150><center><figcaption>Nanga Parbat</figcaption></center></a></td>
+<td><a href='html/dhaulagiri.html'><figure><img src='figuras/dhaulagiri.jpg' width=150 height=150><center><figcaption>Dhaulagiri</figcaption></center></a></td>
+</tr>
+<tr>
 <td><a href='html/annapurna.html'><figure><img src='figuras/Annapurna.jpg' width=150 height=150><center><figcaption>Annapurna</figcaption></center></a></td>
+<td><a href='html/gasherbrum1.html'><figure><img src='figuras/Gasherbrum1.jpg' width=150 height=150><center><figcaption>Gasherbrum1</figcaption></center></a></td>
+<td><a href='html/broadpeak.html'><figure><img src='figuras/BroadPeak.jpeg' width=150 height=150><center><figcaption>Broad Peak</figcaption></center></a></td>
 </tr>
 <tr>
-<td><a href='html/BroadPeak.html'><figure><img src='figuras/BroadPeak.jpeg' width=150 height=150><center><figcaption>Broad Peak</figcaption></center></a></td>
-<td><a href='html/Chooyu.html'><figure><img src='figuras/chooyu.jpg' width=150 height=150><center><figcaption>Cho Oyu</figcaption></center></a></td>
-<td><a href='html/Kangchenjunga.html'><figure><img src='figuras/Kangchenjunga.JPG' width=150 height=150><center><figcaption>Kangchenjunga</figcaption></center></a></td>
-</tr>
-<tr>
-<td><a href='html/K2.html'><figure><img src='figuras/k2.jpg' width=150 height=150><center><figcaption>k2</figcaption></center></a></td>
-<td><a href='html/Everest.html'><figure><img src='figuras/everest.jpg' width=150 height=150><center><figcaption>Everest</figcaption></center></a></td>
-<td><a href='html/annapurna.html'><figure><img src='figuras/Annapurna.jpg' width=150 height=150><center><figcaption>Annapurna</figcaption></center></a></td>
-</tr>
-<tr>
-<td><a href='html/K2.html'><figure><img src='figuras/k2.jpg' width=150 height=150><center><figcaption>k2</figcaption></center></a></td>
-<td><a href='html/Everest.html'><figure><img src='figuras/everest.jpg' width=150 height=150><center><figcaption>Everest</figcaption></center></a></td>
-<td><a href='html/annapurna.html'><figure><img src='figuras/Annapurna.jpg' width=150 height=150><center><figcaption>Annapurna</figcaption></center></a></td>
-</tr>
-<tr>
-<td><a href='html/K2.html'><figure><img src='figuras/k2.jpg' width=150 height=150><center><figcaption>k2</figcaption></center></a></td>
-<td><a href='html/Everest.html'><figure><img src='figuras/everest.jpg' width=150 height=150><center><figcaption>Everest</figcaption></center></a></td>
+<td><a href='html/shishapangma.html'><figure><img src='figuras/ShishaPangma.jpg' width=150 height=150><center><figcaption>Shisha Pangma</figcaption></center></a></td>
+<td><a href='html/gasherbrum2.html'><figure><img src='figuras/gasherbrum2.jpg' width=150 height=150><center><figcaption>Gasherbrum2</figcaption></center></a></td>
 </tr>
 </table>
 
