la que casi lio

--- a/html/annapurna.html
+++ b/html/annapurna.html
@@ -2,10 +2,11 @@
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
 <body background='figuras/annapurna.jpg'>
-<b><p>Annapurna </p></b>
+<b><h1>Annapurna </h1></b>
 <br></br>
 
-<h1>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</h1>
+<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
 </body>
 </link>
+<p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
 </html>
