--- a/html/annapurna.html
+++ b/html/annapurna.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Annapurna </h1></b>
 <br></br>
-
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/annapurna2.jpg' width=300 height=200
+ </tr>
+<tr>
+<td>Altitud:8091m
+</tr>
+<tr>
+<td>Localización: cordillera del Himalaya(Nepal)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/Annapurna/@28.596111,83.8180893,1016m/data=!3m2!1e3!4b1!4m5!3m4!1s0x39be1c44051f84f7:0x941cbed25f0b39fb!8m2!3d28.596111!4d83.820278?hl=en>28°35′46″N 83°49′13″E </a>
+</tr>
+<tr>
+<td>Significado: diosa de la cosecha</td>
+</tr>
+<tr>
+<td>Fue el primer ocho mil en ser escalado, en 1950</td>
+</tr>
+</table>
+<p> Era el ocho mil mas peligroso hasta marzo de 2012 </p>
+</center>
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
