--- a/html/broadpeak.html
+++ b/html/broadpeak.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Broad Peak</h1></b>
 <br></br>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/broadpeak.jpg' width=400 height=200
+ </tr>
+<tr>
+<td>Altitud:8051m
+</tr>
+<tr>
+<td>Localización: macizos de los Gasherbrum (China y Pakistan)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/Broad+Peak/@35.8110022,76.5669646,586m/data=!3m1!1e3!4m5!3m4!1s0x38fb299e4472068f:0x681463aa891bfc24!8m2!3d35.8107486!4d76.5680122>35°48′38″N 76°34′05″E </a>
+</tr>
+<tr>
+<td>Es conocido como K3</td>
+</tr>
+<tr>
+<td>Fue escalado por primera vez en 1957</td>
+</tr>
+</table>
+</center>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
