--- a/html/chooyu.html
+++ b/html/chooyu.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Cho Oyu</h1></b>
 <br></br>
-
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/choyu.jpg' width=300 height=200
+ </tr>
+<tr>
+<td>Altitud:8201m
+</tr>
+<tr>
+<td>Localización: macizo Khumbu (China)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/Cho+Oyu/@28.0972938,86.6562863,973m/data=!3m2!1e3!4b1!4m5!3m4!1s0x39e9bc97463db317:0x24922ef191c10fcf!8m2!3d28.0972891!4d86.658475>28°05′39″N 86°39′39″E </a>
+</tr>
+<tr>
+<td>Significa: diosa turquesa</td>
+</tr>
+<tr>
+<td>Fue escalado por primera vez en 1952</td>
+</tr>
+</table>
+</center>
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
