--- a/html/everest.html
+++ b/html/everest.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Everest</h1></b>
 <br></br>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/everest.jpg' width=400 height=200
+ </tr>
+<tr>
+<td>Altitud:8848m
+</tr>
+<tr>
+<td>Localización: cordillera de Mahalangur Himal(Nepal y China)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/27°59'17.0"N+86°55'31.0"E/@27.988056,86.9230811,1024m/data=!3m1!1e3!4m5!3m4!1s0x0:0x0!8m2!3d27.9880556!4d86.9252778?hl=en>27°59′17″N 86°55′31″E </a>
+</tr>
+<tr>
+<td>Significa: madre del universo</td>
+</tr>
+<tr>
+<td>Fue escalado por primera vez en 1953</td>
+</tr>
+</table>
+</center>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
