--- a/html/gasherbrum1.html
+++ b/html/gasherbrum1.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Gasherbrum 1</h1></b>
 <br></br>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/Gashembrum.jpg' width=300 height=200
+ </tr>
+<tr>
+<td>Altitud:8068m
+</tr>
+<tr>
+<td>Localización: Karakórum (China y Pakistán)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/35°43'28.0"N+76°41'47.0"E/@35.7244444,76.6942002,939m/data=!3m2!1e3!4b1!4m5!3m4!1s0x0:0x0!8m2!3d35.7244444!4d76.6963889?hl=en>35°43′28″N 76°41′47″E </a>
+</tr>
+<tr>
+<td> Significa: monta&ntildea hermosa</td>
+</tr>
+<tr>
+<td> Fue escalado por primera vez en 1958</td>
+</tr>
+</table>
+</center>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
