--- a/html/gasherbrum2.html
+++ b/html/gasherbrum2.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Gasherbrum 2</h1></b>
 <br></br>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/gashembrum2.jpg' width=300 height=200
+ </tr>
+<tr>
+<td>Altitud:8035m
+</tr>
+<tr>
+<td>Localización: Karakórum (China y Pakistán)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/Gasherbrum+II/@35.7576007,76.653708,538m/data=!3m1!1e3!4m5!3m4!1s0x38fb258db539481f:0x5c341abeffd67988!8m2!3d35.7575!4d76.6541668?hl=en>35°45′27″N 76°39′10″E </a>
+</tr>
+<tr>
+<td> Significa: monta&ntildea hermosa</td>
+</tr>
+<tr>
+<td> Fue escalado por primera vez en 1956 </td>
+</tr>
+</table>
+</center>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
