--- a/html/k2.html
+++ b/html/k2.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>K2</h1></b>
 <br></br>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/k2.jpg' width=300 height=200
+ </tr>
+<tr>
+<td>Altitud:8611m
+</tr>
+<tr>
+<td>Localización: Karakórum(China y Pakistán)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/@35.8806192,76.5130136,488m/data=!3m1!1e3>35°52′52″N 76°30′48″E </a>
+</tr>
+<tr>
+<td> Significa: monta&ntildea salvaje</td>
+</tr>
+<tr>
+<td>Fue escalado por primera vez en 1954 </td>
+</tr>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
+</table>
+</center>
+
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
