--- a/html/kangchenjunga.html
+++ b/html/kangchenjunga.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Kangchenjunga</h1></b>
 <br></br>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/kan.jpg' width=350 height=200
+ </tr>
+<tr>
+<td>Altitud:8586m
+</tr>
+<tr>
+<td>Localización: cordillera del Himalaya(Nepal e India)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/Kanchenjunga/@27.7024914,88.1453463,987m/data=!3m2!1e3!4b1!4m5!3m4!1s0x39e6584a17958853:0x716f448087dc6d4c!8m2!3d27.7024914!4d88.147535>27°42′00″N 88°08′00″E </a>
+</tr>
+<tr>
+<td> Significa: los cinco tesoros de la nieve</td>
+</tr>
+<tr>
+<td>Fue escalado por primera vez en 1955 </td>
+</tr>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
+</table>
+</center>
+
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
