--- a/html/lhotse.html
+++ b/html/lhotse.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Lhotse</h1></b>
 <br></br>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/lhotse.jpg' width=350 height=200
+ </tr>
+<tr>
+<td>Altitud:8516m
+</tr>
+<tr>
+<td>Localización: cordillera del Himalaya(Nepal y China)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/Lhotse+I/@27.9631057,86.933422,296m/data=!3m1!1e3!4m5!3m4!1s0x39e8548da84410a5:0x5bb13ea75c282f6c!8m2!3d27.9626373!4d86.933615>27°57′42″N 86°56′00″E </a>
+</tr>
+<tr>
+<td> Significa: pico sur</td>
+</tr>
+<tr>
+<td>Fue escalado por primera vez en 1956 </td>
+</tr>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
+</table>
+</center>
+
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
