--- a/html/makalu.html
+++ b/html/makalu.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Makalu</h1></b>
 <br></br>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/makalu.jpg' width=350 height=200
+ </tr>
+<tr>
+<td>Altitud:8463m
+</tr>
+<tr>
+<td>Localización: cordillera del Himalaya(Nepal y China)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/Makalu+56900,+Nepal/@27.7397503,87.148978,689m/data=!3m1!1e3!4m5!3m4!1s0x39e8f224fecab3fb:0xed0d69c00ff7a5b7!8m2!3d27.74!4d87.15>27°53′21″N 87°05′19″E </a>
+</tr>
+<tr>
+<td> Significa: monta&ntildea negra</td>
+</tr>
+<tr>
+<td>Fue escalado por primera vez en 1975 </td>
+</tr>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
+</table>
+</center>
+
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
