--- a/html/manaslu.html
+++ b/html/manaslu.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Manaslu</h1></b>
 <br></br>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/manaslu.jpg' width=350 height=200
+ </tr>
+<tr>
+<td>Altitud:8163m
+</tr>
+<tr>
+<td>Localización: cordillera del Himalaya(Nepal)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/Manaslu+I/@28.5499212,84.5587791,536m/data=!3m1!1e3!4m5!3m4!1s0x399561c4f234ba25:0x147b79ae63ec0561!8m2!3d28.5497107!4d84.5596768>28°33′00″N 84°33′35″E </a>
+</tr>
+<tr>
+<td> Significa: monta&ntildea de los espiritus</td>
+</tr>
+<tr>
+<td>Fue escalado por primera vez en 1956 </td>
+</tr>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
+</table>
+</center>
+
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
