--- a/html/shishapangma.html
+++ b/html/shishapangma.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Shisha Pangma</h1></b>
 <br></br>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/shisha.jpg' width=300 height=200
+ </tr>
+<tr>
+<td>Altitud:8013m
+</tr>
+<tr>
+<td>Localización: cordillera del Himalaya(China)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/Shishapangma/@28.3525,85.7769779,1023m/data=!3m2!1e3!4b1!4m5!3m4!1s0x39ea6f68342ae797:0x7665abaff77ab879!8m2!3d28.3525!4d85.7791666>28°21′08″N 85°46′47″E </a>
+</tr>
+<tr>
+<td> Significa: cordillera sobre la planicie de hierba</td>
+</tr>
+<tr>
+<td>Fue escalado por primera vez en 1964 </td>
+</tr>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
+</table>
+</center>
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
