--- a/html/dhaulagiri.html
+++ b/html/dhaulagiri.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Dhaulagiri</h1></b>
 <br></br>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/Dhaulagiri.jpg' width=300 height=200
+ </tr>
+<tr>
+<td>Altitud:8167m
+</tr>
+<tr>
+<td>Localización: cordillera Himalaya (Nepal) 
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/Dhaulagiri/@28.6984652,83.4851609,1019m/data=!3m2!1e3!4b1!4m5!3m4!1s0x39bdfb53bb649b0d:0xc43991d2fee8713b!8m2!3d28.6984652!4d83.4873496?hl=en>28°41′46″N 83°29′43″E </a>
+</tr>
+<tr>
+<td> Significa: deslumbrante,blanco,hermoso</td>
+</tr>
+<tr>
+<td>Fue escalado por primera vez en 1960 </td>
+</tr>
+</table>
+</center>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
