--- a/html/nangaparbat.html
+++ b/html/nangaparbat.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <link rel='stylesheet' type='text/css'href='style.css'>
 <meta charset='UTF-8'>
-<body background='figuras/annapurna.jpg'>
+
 <b><h1>Nanga Parbat</h1></b>
 <br></br>
 
-<p>Se encuentra en el macizo de Annapurna, situado en el Himalaya,Nepal.</p>
+<center>
+<table border='5'>
+<tr> 
+<td><img src='figuras/nanga.jpg' width=350 height=200
+ </tr>
+<tr>
+<td>Altitud:8125m
+</tr>
+<tr>
+<td>Localización: Karakórum(Pakistán)
+</tr>
+<tr>
+<td>Coordenadas:<a href=https://www.google.es/maps/place/Nanga+Parbat/@35.2375082,74.5869559,901m/data=!3m2!1e3!4b1!4m5!3m4!1s0x38e6c007399ee885:0x10e2393cfebe6c2!8m2!3d35.2375038!4d74.5891446>35°14′21″N 74°35′24″E </a>
+</tr>
+<tr>
+<td> Significa: monta&ntildea asesina</td>
+</tr>
+<tr>
+<td>Fue escalado por primera vez en 1953 </td>
+</tr>
+
+</table>
+</center>
+
 </body>
 </link>
 <p align='center'><a href='../index.html'><img src='../figuras/inicio.gif' widther='50' height= '50'></a></p>
